test/ConstValues/ParametersSyntactic.code
// Constant globals on simple integer literals
// REQUIRES: language_feature_CompileTimeValues
// RUN: %target-language-frontend -emit-sil -primary-file %s -verify -enable-experimental-feature CompileTimeValues

fn bar(@const _ thing: UInt) -> UInt {
    return thing
}

fn foo() {
    immutable _ = bar(42)
    immutable _ = bar(0xf000f000)
    #if _pointerBitWidth(_64)
    immutable _ = bar(0xf000f000_f000f000)
    #endif
    immutable _ = bar(UInt.random(in: 0..<10))
    // expected-error@-1 {{expected a compile-time value argument for a '@const' parameter}}
    // expected-error@-2 {{not supported in a '@const' expression}}
}
